2005-01-01  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/PlayerInterface.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Export UIManager instead of ActionGroup.

2004-12-31  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/Muine.cs:
	* src/PlayerDBusObject.cs:

	Register with D-Bus as early as possible.

2004-12-31  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/PlayerInterface.cs:
	* PluginLib/Plugin.cs:
	* TODO:
	* plugins/DashboardPlugin.cs:
	* src/About.cs:
	* src/MmKeys.cs:
	* src/Muine.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlayerDBusObject.cs:
	* src/PlaylistWindow.cs:

	Major cleanup:
	- Moved the tray icon management code into itself, make it use
	  the PlayerInterface class, and instantiate from Muine.
	- Same treatment for the multimedia key code
	
	Furthermore: Added StateChanged signal to PlayerInterface, and
	an ActionGroup property giving PlaylistWindow's Gtk.ActionGroup.
	
	* src/PluginManager.cs:

	Don't bork on broken plug-ins.

2004-12-31  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/PlayerInterface.cs:
	* src/PlayerDBusObject.cs:
	* src/PlaylistWindow.cs:

	Add PlayerInterface.Quit.

2004-12-31  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Split CLEANFILES up into CLEANFILES and DISTCLEANFILES.

2004-12-31  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:

	Remove duplicate deprecation markers.

2004-12-31  Tamara Roberson  <foxxygirltamara@gmail.com>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverImage.cs:
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Defined drag-and-drop targets in Muine.
	Moved TargetType enum from PlaylistWindow to Muine.	
	
2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/AddAlbumWindow.cs:
	* src/CoverImage.cs:

	Dragging albums now also supports the uri-list dnd type.

2004-12-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Don't compile unused InfoWindow.cs and NoMusicFoundWindow.cs for now.
